[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tinygenkey"
version = "0.3.1"
description = "A tiny, secure key generator."
authors = [
    { name = "Razka Rizaldi", email = "razka.rizaldis@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["key", "generator", "security", "token"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
tinygenkey = "tinygenkey.main:test_gen"
