[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tinygenkey"
version = "0.4.0-dev"
description = "A tiny, secure key generator."
authors = [
    { name = "Razka Rizaldi", email = "razka.rizaldis@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["key", "generator", "security", "token"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "setuptools>=80.9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tinygenkey*"]

[project.scripts]
tinygenkey = "tinygenkey.main:repl"
